<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.anbo.financetesting.EntryLookupScreen">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/entry_lookup_instruction_string"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/entry_lookup_tag_hint"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/entry_lookup_cost_range_text"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:hint="@string/entry_lookup_cost_low_bound"/>

            <EditText
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:hint="@string/entry_lookup_cost_high_bound"/>
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/entry_lookup_date_range_text"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="date"
                android:hint="@string/entry_lookup_screen_date_lowbound"/>
            <EditText
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="date"
                android:hint="@string/entry_lookup_screen_cost_highbound"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
