<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".CostRecordingScreen">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cost_hint"
            android:id="@+id/cost_recording_screen_cost_box"
            android:inputType="numberDecimal"
            />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tag_hint"
            android:id="@+id/cost_recording_screen_tags_prompt"
            android:inputType="text"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="And/Or select recent tags from below"/>
        <Spinner
            android:id="@+id/cost_recording_sreen_tag_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="bottom"
            android:text="@string/cost_recording_add_entry_button"
            android:onClick="addEntry"/>
    </LinearLayout>

    <!--<TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />-->

</RelativeLayout>
